--- a/app/src/main/res/layout/activity_tasks_.xml
+++ b/app/src/main/res/layout/activity_tasks_.xml
@@ -15,7 +15,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v4.widget.NestedScrollView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
@@ -23,6 +23,6 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/task_recy"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </android.support.v4.widget.NestedScrollView>
+            android:layout_height="match_parent" />
+    </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
