--- a/app/src/main/res/layout/item_model_cloth.xml
+++ b/app/src/main/res/layout/item_model_cloth.xml
@@ -11,7 +11,7 @@
 
     <LinearLayout
 
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <ImageView
@@ -21,8 +21,8 @@
             android:layout_marginLeft="@dimen/spacing_large"
             android:layout_marginTop="@dimen/spacing_middle"
             android:layout_marginRight="@dimen/spacing_large"
-            android:src="@drawable/shape_circle"
-            tools:srcCompat="@drawable/ic_toys_black_24dp" />
+            android:src="@drawable/ic_toys_black_24dp"
+           />
 
         <TextView
             android:id="@+id/name_model"
