--- a/app/src/main/res/layout/payment_item.xml
+++ b/app/src/main/res/layout/payment_item.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardElevation="@dimen/standard_card_elevation"
-    app:cardCornerRadius="@dimen/standard_card_radius"
     android:layout_margin="@dimen/stander_margin_x"
-    >
+    app:cardCornerRadius="@dimen/standard_card_radius"
+    app:cardElevation="@dimen/standard_card_elevation">
+
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
+        xmlns="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:layout_editor_absoluteY="25dp">
@@ -58,9 +57,9 @@
             </LinearLayout>
 
             <!--<View-->
-                <!--android:layout_width="10dp"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:background="@color/blue_grey_200" />-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:background="@color/blue_grey_200" />-->
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -89,9 +88,9 @@
 
 
             <!--<View-->
-                <!--android:layout_width="20dp"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:background="@color/blue_grey_200" />-->
+            <!--android:layout_width="20dp"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:background="@color/blue_grey_200" />-->
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -104,18 +103,22 @@
 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="وضعیت"
-                    android:textSize="18sp"
                     android:layout_marginRight="@dimen/stander_margin_x4"
+                    android:text="مقدار"
+                    android:textSize="18sp"
                     tools:layout_editor_absoluteX="112dp"
                     tools:layout_editor_absoluteY="26dp" />
 
-                <ImageView
-                    android:id="@+id/img_status_payment"
+                <TextView
+                    android:id="@+id/payment_amount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="@dimen/stander_margin_x4"
-                    app:srcCompat="@drawable/delet" />
+                    android:text="0"
+                    android:textSize="18sp"
+                    tools:layout_editor_absoluteX="112dp"
+                    tools:layout_editor_absoluteY="26dp" />
+
             </LinearLayout>
 
         </LinearLayout>
