--- a/app/src/main/res/layout/task_item_2.xml
+++ b/app/src/main/res/layout/task_item_2.xml
@@ -1,30 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout  xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardElevation="@dimen/standard_card_elevation"
-    app:cardCornerRadius="@dimen/standard_card_radius"
-    android:layout_margin="@dimen/stander_margin_x"
-    >
-
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/lyt_parent"
+    android:layout_width="match_parent"
+    android:layout_height="80dp"
+    android:layout_margin="10dp"
+    android:layoutDirection="rtl"
+    android:orientation="horizontal"
+    android:padding="5dp">
 
     <LinearLayout
-        android:id="@+id/lyt_parent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
-        android:layout_marginLeft="1dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginRight="1dp"
+        android:layout_height="80dp"
+        android:orientation="horizontal">
 
-        android:layoutDirection="rtl"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.51"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -129,7 +119,4 @@
         </LinearLayout>
 
     </LinearLayout>
-
-
-
-</LinearLayout>
+</android.support.v7.widget.CardView>
