--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -247,6 +247,7 @@
                                     android:layout_height="0dp" />
 
                                 <LinearLayout
+                                    android:onClick="On_Setting"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
                                     android:orientation="vertical">
