--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -2,10 +2,19 @@
 <resources>
     <integer-array name="sample_images">
         <item>@drawable/img</item>
+
         <item>@drawable/img_2</item>
         <item>@drawable/img_3</item>
         <item>@drawable/img_4</item>
         <item>@drawable/img_5</item>
+        <item>@drawable/img_6</item>
+        <item>@drawable/img_7</item>
+        <item>@drawable/img_8</item>
+        <item>@drawable/img_9</item>
+        <item>@drawable/img_10</item>
+        <item>@drawable/img_11</item>
+        <item>@drawable/img_12</item>
+        <item>@drawable/img_13</item>
 
 
     </integer-array>
