--- a/app/src/main/res/layout/activity_regester_.xml
+++ b/app/src/main/res/layout/activity_regester_.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -80,7 +81,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="اندازه قد را وارد کنید "
-                        android:inputType="number" />
+                        android:inputType="numberDecimal|numberSigned" />
                 </android.support.design.widget.TextInputLayout>
             </LinearLayout>
 
@@ -99,7 +100,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="اندازه شانه را وارد کنید "
-                        android:inputType="number" />
+                        android:inputType="numberDecimal|numberSigned" />
                 </android.support.design.widget.TextInputLayout>
             </LinearLayout>
 
@@ -119,7 +120,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="اندازه آستین را وارد کنید "
-                        android:inputType="number" />
+                        android:inputType="numberDecimal|numberSigned" />
                 </android.support.design.widget.TextInputLayout>
             </LinearLayout>
 
@@ -138,7 +139,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="اندازه دم آستین را وارد کنید "
-                        android:inputType="number" />
+                        android:inputType="numberDecimal|numberSigned" />
                 </android.support.design.widget.TextInputLayout>
             </LinearLayout>
 
@@ -158,7 +159,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="اندازه یخن را وارد کنید "
-                        android:inputType="number" />
+                        android:inputType="numberDecimal|numberSigned" />
                 </android.support.design.widget.TextInputLayout>
             </LinearLayout>
 
@@ -178,7 +179,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="اندازه بغل را وارد کنید "
-                        android:inputType="number" />
+                        android:inputType="numberDecimal|numberSigned" />
                 </android.support.design.widget.TextInputLayout>
 
 
@@ -200,7 +201,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="اندازه دامن را وارد کنید "
-                        android:inputType="number" />
+                        android:inputType="numberDecimal|numberSigned" />
                 </android.support.design.widget.TextInputLayout>
             </LinearLayout>
 
@@ -220,7 +221,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="اندازه شلوار را وارد کنید "
-                        android:inputType="number" />
+                        android:inputType="numberDecimal|numberSigned" />
                 </android.support.design.widget.TextInputLayout>
             </LinearLayout>
 
@@ -240,7 +241,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="اندازه پارچه را وارد کنید "
-                        android:inputType="number" />
+                        android:inputType="numberDecimal|numberSigned" />
                 </android.support.design.widget.TextInputLayout>
             </LinearLayout>
 
@@ -260,7 +261,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="اندازه بر شلوار را وارد کنید "
-                        android:inputType="number" />
+                        android:inputType="numberDecimal|numberSigned" />
                 </android.support.design.widget.TextInputLayout>
             </LinearLayout>
 
