--- a/app/src/main/res/layout/activity__no__permesion_use.xml
+++ b/app/src/main/res/layout/activity__no__permesion_use.xml
@@ -60,6 +60,14 @@
         android:padding="10dp"
         android:orientation="vertical">
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
         <TextView
             android:layout_gravity="center"
             android:textSize="30sp"
@@ -74,7 +82,6 @@
             android:layout_marginTop="10dp"
             android:textSize="20sp"
             android:textColor="#FFFFFF"
-            android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
