--- a/app/src/main/res/layout/task_item_2.xml
+++ b/app/src/main/res/layout/task_item_2.xml
@@ -23,7 +23,6 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="اسم مشتری :"
@@ -96,24 +95,58 @@
             android:layout_height="match_parent"
             android:layout_margin="5dp"
 
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
-            <TextView
-
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="@dimen/stander_margin_x4"
-                android:text="وضعیت"
-                android:textSize="18sp"
-                tools:layout_editor_absoluteX="112dp"
-                tools:layout_editor_absoluteY="26dp" />
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/img_status"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="@dimen/stander_margin_x4"
-                app:srcCompat="@drawable/delet" />
+                <TextView
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/stander_margin_x4"
+                    android:text="وضعیت"
+                    android:textSize="18sp"
+                    tools:layout_editor_absoluteX="112dp"
+                    tools:layout_editor_absoluteY="26dp" />
+
+                <ImageView
+                    android:id="@+id/img_status"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginRight="@dimen/stander_margin_x4"
+                    app:srcCompat="@drawable/delet" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginRight="10dp"
+
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="شماره فاکتور"
+                    android:textAlignment="center"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/fac_number"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="۱۵"
+                    android:textAlignment="center"
+                    android:textSize="18sp" />
+            </LinearLayout>
+
         </LinearLayout>
 
     </LinearLayout>
